nullaway_error_b7f90610-3fc0-41a2-840d-83bb88af59e6.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/Tileset.java:281: error: [NullAway] dereferenced expression this.allTiles is @Nullable
    return this.allTiles.get(id);
                        ^
    (see http://t.uber.com/nullaway )
